# wanpipe

./: .git_info  .router_version  COPYING  ChangeLog  Filelist  Makefile  README  Setup  project.config  wanpipe.spec
api/: Makefile  README  sample_c  sample_cpp
api/libsangoma/: Makefile.am  build.sh  compile.bat  configure.in  init-automake.sh  libhpsangoma-doxygen.config  libhpsangoma.c  libhpsangoma.h  libhpsangoma_priv.c  libhpsangoma_priv.h  libsangoma-doxygen.config  libsangoma-pvt.h  libsangoma.c  libsangoma.def  libsangoma.h  libsangoma.rc  libsangoma.sln  libsangoma.vcproj  libsangoma_config.c  libsangoma_hwec.c  libsangoma_utils.c  sangoma_pri.c  sangoma_pri.h  sources
api/libsangoma/examples/audio_detect/: Makefile  audio_detect.c  run_audio_detect.sh
api/libsangoma/examples/hdlc_test/: Makefile  hdlc_test.c  tdm_hdlc_test.sh
api/libsangoma/examples/hptdm_api/: Makefile  aft_tdm_hp.c  aft_tdm_hp.h  doxygen.config  rebuild.sh
api/libsangoma/examples/priserver/: Makefile  README  librc  priserver.c  sound.raw
api/libsangoma/examples/sample_data_tapping/: Makefile.Linux  ReadMe.txt  UpgradeLog.XML  clean.sh  compile.bat  release.sh  sample_data_tapping.aps  sample_data_tapping.cpp  sample_data_tapping.rc  sample_data_tapping.sln  sample_data_tapping.vcproj  sample_data_tapping.vcxproj  sample_data_tapping.vcxproj.filters  sources  to_test_system.bat
api/libsangoma/examples/sample_data_tapping/Sangoma/: Sangoma.2010.sln
api/libsangoma/examples/sample_data_tapping/Sangoma/Code/: Sangoma.vcxproj  Sangoma.vcxproj.filters
api/libsangoma/examples/sample_data_tapping/Sangoma/Code/Sangoma/: Makefile.Linux  PortBuffer.cpp  PortBuffer.h  SangomaCard.cpp  SangomaCard.h  SangomaPort.cpp  SangomaPort.h  driver_configurator.cpp  driver_configurator.h  sangoma_interface.cpp  sangoma_interface.h
api/libsangoma/examples/sample_data_tapping/regression/SangomaHandleLeakAnalysis/: ChannelizedBuffer.h  Makefile.Linux  PortBuffer.cpp  PortBuffer.h  SangomaCard.cpp  SangomaCard.h  SangomaPort.cpp  SangomaPort.h  compile.bat  driver_configurator.cpp  driver_configurator.h  leak_analysis.cpp  resource.h  sangoma_interface.cpp  sangoma_interface.h  sources  to_test_system.bat  upload.sh
api/libsangoma/examples/ss7_test/: Makefile  hdlc_test.c  tdm_hdlc_test.sh
api/libsangoma/examples/ss7_test/hdlc/: Makefile  wanpipe_hdlc.c
api/libsangoma/examples/ss7_test/tests/: tx_fisu_128_1_1.sh  tx_fisu_128_all.sh  tx_fisu_128_force_rx_1_1.sh  tx_fisu_4096.sh  tx_lssu_128_4_1_1.sh  tx_lssu_128_4_all.sh  tx_lssu_128_4_force_rx_1_1.sh  tx_lssu_4096_7.sh  tx_lssu_4096_8.sh
api/libsangoma/sample_c/: Makefile.Linux  compile.bat  lib_api.c  lib_api.h  sample-doxygen.config  sample.c  sources
api/libsangoma/sample_cpp/: Makefile.Linux  compile.bat  sample.cpp  sample.h  sample.sln  sample.vcproj  sample_linux_compat.h  sangoma_cthread.cpp  sangoma_cthread.h  sangoma_interface.cpp  sangoma_interface.h  sangoma_port.cpp  sangoma_port.h  sangoma_port_configurator.cpp  sangoma_port_configurator.h  sources
api/libsangoma/wanec/: wanec_api.c  wanec_api.h  wanec_api_lib.c  waneclib.def
api/libstelephony/: INSTALL  Makefile.am  PToneDecoder.cpp  PToneDecoder.h  PToneEncoder.cpp  PToneEncoder.h  Q931EventsDecoder.cpp  Q931EventsDecoder.h  README  ReadMe.txt  Sink.h  StelephonyApi.h  build.sh  compile.bat  configure.in  file  libstelephony.cpp  libstelephony.h  libstelephony_linux_compat.h  resource.h  sources  stelephony.aps  stelephony.cpp  stelephony.def  stelephony.h  stelephony.rc  stelephony.sln  stelephony.vcproj
api/libstelephony/stel_tone/: libstelephony_tone.h  sources  stel_tone.c  wp_fsk.c  wp_fsk.h  wp_libteletone.h  wp_libteletone_detect.c  wp_libteletone_detect.h  wp_libteletone_generate.c  wp_libteletone_generate.h  wp_uart.c
deb_control/: postinst  prerm  wanpipe.deb
doc/: ANNOUNCE  Freshmeat_intro.txt  README  README-1.install  README-2.config  README-3.operation  README-4.debugging  README.adccp  README.adsl  README.aft_ch  README.aft_channelized  README.aft_firm_update  README.asterisk  README.asyhdlc_api  README.atm  README.bitstrm  README.changes  README.ethernet_bridge  README.external_scripts  README.faq  README.flanders_policy  README.fr  README.hdlc_api  README.irq_to_cpu_smp_mapping  README.katm  README.loadbalancing  README.mpapi  README.multilink  README.multilink_s514  README.pos  README.pppd  README.redhat  README.rpm  README.rpmbuild  README.sdlc  README.ss7  README.tdmv_api  README.tdmv_channelized  README.wpbackupd  README.wpkbdmon  (+4 more)
firmware/: adccp.sfm  asy514.sfm  atm514.sfm  bitstrm.sfm  bscmp514.sfm  bscstrm514.sfm  cdual514.sfm  cdual514asy.sfm  edu_kit.sfm  fr514.sfm  pos1255.sfm  pos2126.sfm  pos2127.sfm  pos4680.sfm  pos7000.sfm  posicl.sfm  ppp514.sfm  sdlc514.sfm  wan_aftup  x25_514.sfm
kbuild/: Makefile
patches/: build_links.sh  clean_old_wanpipe.sh  copy_modules.sh  kern_i_private_check.sh  makefile.af_wanpipe.patch  makefile.patch.2.2.X  makefile.patch.2.4.0  makefile.patch.2.4.4  makefile.patch.utils.2.2.X  makefile.patch.utils.2.4.X  rundepmod.sh  sangoma-zaptel-patch.sh
rpmspec/: wanpipe-mod.rpmspec  wanpipe-util.rpmspec  wanpipe.rpmspec
samples/: Makefile  README  clean.sh  interface  redialer  udevRulesPatch  wanpipe1.adsl  wanpipe1.adsl_decoded  wanpipe1.aft  wanpipe1.asy  wanpipe1.asyhdlc_pri  wanpipe1.atm  wanpipe1.atty  wanpipe1.bitstrm  wanpipe1.chdlc  wanpipe1.chdlc_t1  wanpipe1.decoded  wanpipe1.fr  wanpipe1.fr_t1  wanpipe1.katm  wanpipe1.lip_hdlc  wanpipe1.lip_hdlc_tdm_api  wanpipe1.lip_lapb  wanpipe1.lip_lapd  wanpipe1.lip_q921  wanpipe1.mp_asy  wanpipe1.mult_fr  wanpipe1.mult_fr_t1  wanpipe1.mult_ppp_chdlc  wanpipe1.mult_ppp_chdlc_t1  wanpipe1.new_ec_stuff  wanpipe1.pos  wanpipe1.ppp  wanpipe1.ppp_t1  wanpipe1.rtp  wanpipe1.sdlc  wanpipe1.stty  wanpipe1.t3  (+8 more)
util/: README  (+2 more)
(+1005 files in other folders)
